# conferencia-recebimentos

./: .gitignore  README.md  app.py  pyinstaller.spec  pyproject.toml  requirements.txt
core/: __init__.py  agenda_parser.py  demonstrativo_parser.py  logger.py  matcher.py  models.py  normalizer.py  pdf_marker.py  reporter.py
gui/: main_window.py  settings.py  worker.py
tests/: test_matcher.py  test_normalizer.py
