[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "conferencia-recebimentos"
version = "1.0.0"
description = "Conferência Automática de Recebimentos Médicos Promédica"
authors = [{name = "Yuri Costa", email = "yuricostaf@example.com"}]
requires-python = ">=3.12"
license = {text = "Proprietary"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Healthcare Industry",
    "Operating System :: MacOS :: MacOS 11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Repository = "https://github.com/yuricostaf-hue/conferencia-recebimentos"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-v --cov=core --cov-report=html"

[tool.black]
line-length = 100
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
